--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav>
         <div class="header">
           <a class="logo" href="index.html"
-            ><img src="./API/JWDP5/images/logo.JPG" alt="logo Orinoco"
+            ><img src="./JWDP5-master/images/logo.JPG" alt="logo Orinoco"
           /></a>
           <input type="checkbox" id="chk" />
           <label for="chk" class="show-menu-btn">
