--- a/page_panier.html
+++ b/page_panier.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./card.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
@@ -35,7 +34,7 @@
       <nav>
         <div class="header">
           <a class="logo" href="index.html"
-            ><img src="./API/JWDP5/images/logo.JPG" alt="logo Orinoco"
+            ><img src="./JWDP5-master/images/logo.JPG" alt="logo Orinoco"
           /></a>
           <input type="checkbox" id="chk" />
           <label for="chk" class="show-menu-btn">
@@ -85,6 +84,8 @@
         </ul>
       </section>
     </footer>
+
+    <script src="./card.js" defer></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
