--- a/page_produit.html
+++ b/page_produit.html
@@ -35,7 +35,7 @@
       <nav>
         <div class="header">
           <a class="logo" href="index.html"
-            ><img src="./API/JWDP5/images/logo.JPG" alt="logo Orinoco"
+            ><img src="./JWDP5-master/images/logo.JPG" alt="logo Orinoco"
           /></a>
           <input type="checkbox" id="chk" />
           <label for="chk" class="show-menu-btn">
@@ -56,7 +56,9 @@
       <h1 id="my_title"><span class="by">Orinours</span></h1>
       <h3>by Orinoco</h3>
     </section>
-    <section id="page_product"></section>
+    <section class="conteneur">
+      <section id="page_product"></section>
+    </section>
     <footer>
       <section id="footer" class="footer_catalogue">
         <ul>
@@ -66,6 +68,7 @@
         </ul>
       </section>
     </footer>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
