ajout responsive + thanks + mentions

--- a/page_panier.html
+++ b/page_panier.html
@@ -78,9 +78,9 @@
     <footer>
       <section id="footer" class="footer_catalogue">
         <ul>
-          <li><a href=".">Contact</a></li>
+          <li><a href="mailto:contact@orinours.com">Contact</a></li>
           <li><a href="https://www.facebook.com/">Facebook</a></li>
-          <li><a href="#">Conditions d'utilisations</a></li>
+          <li><a href="mentions.html">Mentions Légales</a></li>
         </ul>
       </section>
     </footer>
