--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,6 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <script type="text/javascript" src="./display_product.js"></script>
     <script
       src="https://kit.fontawesome.com/ce6bb10a35.js"
       crossorigin="anonymous"
@@ -70,8 +69,8 @@
       </div>
       <div id="thanks3">
         <p id="troisieme_partie">
-          Si ton ours ne te comble pas de bonheur,</br>tu auras besoin de ton numéro
-          Adoptant pour démarrer une thérapie !
+          Si ton ours ne te comble pas de bonheur,<br />tu auras besoin de ton
+          numéro Adoptant pour démarrer une thérapie !
         </p>
         <p class="merci">
           La famille Orinours te remercie, et te souhaite une belle nuit.
