--- a/mentions.html
+++ b/mentions.html
@@ -213,7 +213,7 @@
         et d’opposition aux données personnelles le concernant. Pour l’exercer,
         adressez votre demande à Orinours par email :
         <a
-          href="mailto:contact@orinours.com?subject=Contact ï¿½ partir des mentions lï¿½gales via le site Orinours"
+          href="mailto:contact@orinours.com?subject=Contact à partir des mentions légales via le site Orinours"
           >contact@orinours.com</a
         >
         ou par écrit dûment signée, accompagnée d’une copie du titre d’identité
